Crash when setting Edge Weight/Crease #88900

Closed
opened 2021-06-06 23:40:31 +02:00 by Bill Ortis · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-05 07:05, hash: c7fee64dea
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash occurs 'every time' when trying to apply a Crease setting to a row of Edges.

Exact steps for others to reproduce the error

With default cube:

  • Select at least 2 edges
  • Press Shift-E for Edge Crease
    Blender crashes.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-05 07:05, hash: `c7fee64dea` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash occurs 'every time' when trying to apply a Crease setting to a row of Edges. **Exact steps for others to reproduce the error** With default cube: - Select at least 2 edges - Press Shift-E for Edge Crease Blender crashes.
Author

Added subscriber: @lionheart001

Added subscriber: @lionheart001

#88969 was marked as duplicate of this issue

#88969 was marked as duplicate of this issue

#88915 was marked as duplicate of this issue

#88915 was marked as duplicate of this issue
Richard Antalik changed title from Crashing when trying to set Edge Weight/Crease to Crash when setting Edge Weight/Crease 2021-06-07 06:34:23 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @iss

Added subscriber: @iss

head was NULL

>	blender.exe!_bm_elem_flag_enable(BMHeader * head, const unsigned char hflag) Line 52	C

 	blender.exe!tc_mesh_ensure_partial_update(TransInfo * t, TransDataContainer * tc) Line 1740	C
 	blender.exe!recalcData_mesh(TransInfo * t) Line 1849	C
 	blender.exe!recalcData(TransInfo * t) Line 1703	C
 	blender.exe!applyCrease(TransInfo * t, const int * UNUSED_mval) Line 106	C
 	blender.exe!transformApply(bContext * C, TransInfo * t) Line 1895	C
 	blender.exe!transform_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 442	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2081	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2910	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2958	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3378	C
 	blender.exe!WM_main(bContext * C) Line 650	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 523	C
`head` was NULL ``` > blender.exe!_bm_elem_flag_enable(BMHeader * head, const unsigned char hflag) Line 52 C blender.exe!tc_mesh_ensure_partial_update(TransInfo * t, TransDataContainer * tc) Line 1740 C blender.exe!recalcData_mesh(TransInfo * t) Line 1849 C blender.exe!recalcData(TransInfo * t) Line 1703 C blender.exe!applyCrease(TransInfo * t, const int * UNUSED_mval) Line 106 C blender.exe!transformApply(bContext * C, TransInfo * t) Line 1895 C blender.exe!transform_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 442 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2081 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2910 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2958 C blender.exe!wm_event_do_handlers(bContext * C) Line 3378 C blender.exe!WM_main(bContext * C) Line 650 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 523 C ```

Added subscribers: @Sergey, @PratikPB2123

Added subscribers: @Sergey, @PratikPB2123
Germano Cavalcante self-assigned this 2021-06-07 12:46:35 +02:00

This issue was referenced by 8b8c3c34dd

This issue was referenced by 8b8c3c34dd9f708210dad9ed014e56aa5c0d50b1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @YorsH, @mano-wii

Added subscribers: @YorsH, @mano-wii
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88900
No description provided.