Fix T88900: Crash when setting Edge Weight/Crease

The `recalcData` of "convert_mesh_edge" did more
than it was supposed to.